--- a/_posts/2015-01-09-thanks.md
+++ b/_posts/2015-01-09-thanks.md
@@ -10,7 +10,7 @@ category: paper
 
 &emsp 在所有的求学阶段中，我最感谢的就是研究生的时光。大学可以说是我人生的第一个分水岭，大学之前，我的目标特别单一，就是考到一所好的大学，虽然当时自己并不知道什么是真正的好。所以直到高中，我的生活永远只是不知疲倦的学习，真的是不知疲倦。我会晚上在别人睡的正香的时候从床上爬起来，在大冬天北方那寒冷的夜里，倚靠在办公室走廊的锅炉旁津津有味的看书；会在课间小伙伴们玩的正欢的时候，趴在教室的墙根上，晒着太阳去复习；会在周末别人都出去逛街的时候，在幽静的教室里一遍又一遍的记着错题笔记，最终换来了不负众望的回报。但是大学期间，确实过的浑浑噩噩，以至于到了大学结束，竟然还对自己的人生模模糊糊，根本不知道自己想要什么，想做什么。
 
-    ##也许直到那时，我才开始清醒。于是我立志考研，由于对通信工程确实缺少兴趣，于是和同寝室一个小伙伴立志考计算机。读研的初衷可以归纳为两个方面，一个是内在，一个是外在。外在指的是锻炼身体，达到正常体重，所以在开学之后的三个月，每天晚上坚持打一个小时的篮球，参加了跆拳道社团，和寝室的小伙伴定期出去骑行，终于三个月后成功减掉了将近20斤的体重；内在指的是学习以及思想，学习方面，不再吊儿郎当，终于成功的获得了研究生国家奖学金，这对我是一个很大的鼓励，还有顺利通过了英语六级，也成为了一名预备党员，完成了以前荒废的该做的事。而且最重要的，还找到了心仪的她。
+    也许直到那时，我才开始清醒。于是我立志考研，由于对通信工程确实缺少兴趣，于是和同寝室一个小伙伴立志考计算机。读研的初衷可以归纳为两个方面，一个是内在，一个是外在。外在指的是锻炼身体，达到正常体重，所以在开学之后的三个月，每天晚上坚持打一个小时的篮球，参加了跆拳道社团，和寝室的小伙伴定期出去骑行，终于三个月后成功减掉了将近20斤的体重；内在指的是学习以及思想，学习方面，不再吊儿郎当，终于成功的获得了研究生国家奖学金，这对我是一个很大的鼓励，还有顺利通过了英语六级，也成为了一名预备党员，完成了以前荒废的该做的事。而且最重要的，还找到了心仪的她。
 
     特别要感谢的就是黄小红老师和马严老师。还记得第一次去找黄老师咨询报考时的忐忑，成绩出来时的紧张。因为正好压着国家线，所以特别担心，但是黄老师没有抛弃我，给了我这个读研的机会，所以我也是格外的珍惜。而且虽然我是工程硕士，但是还是发表了两篇论文，一篇专利，确实很为自己骄傲。现在的我，虽然还不够成熟，某些方面还特别欠缺，但是我的内心得到了巨大的成长，真的还要对黄老师说一声感谢，感谢您！也谢谢马老师教给我们的做人之道。
 
