--- a/_posts/2015-01-09-thanks.md
+++ b/_posts/2015-01-09-thanks.md
@@ -4,7 +4,7 @@ title: 匆匆那年
 category: paper
 ---
 {% include JB/setup %}
-	时光荏苒，岁月最经不住时间的消磨。转眼之间，到了我学生生涯的终点。回首望去，依稀还能看见自己由一个稚嫩的孩童逐渐转变为一个朝气蓬勃的青年的过程。在这之前，我的大部分时间都是在学校度过的，相比较起来，学校更像家。这之后的路，一眼望不到边，期盼着无限的可能。
+&#160; &#160; &#160; &#160;时光荏苒，岁月最经不住时间的消磨。转眼之间，到了我学生生涯的终点。回首望去，依稀还能看见自己由一个稚嫩的孩童逐渐转变为一个朝气蓬勃的青年的过程。在这之前，我的大部分时间都是在学校度过的，相比较起来，学校更像家。这之后的路，一眼望不到边，期盼着无限的可能。
     
 在所有的求学阶段中，我最感谢的就是研究生的时光。大学可以说是我人生的第一个分水岭，大学之前，我的目标特别单一，就是考到一所好的大学，虽然当时自己并不知道什么是真正的好。所以直到高中，我的生活永远只是不知疲倦的学习，真的是不知疲倦。我会晚上在别人睡的正香的时候从床上爬起来，在大冬天北方那寒冷的夜里，倚靠在办公室走廊的锅炉旁津津有味的看书；会在课间小伙伴们玩的正欢的时候，趴在教室的墙根上，晒着太阳去复习；会在周末别人都出去逛街的时候，在幽静的教室里一遍又一遍的记着错题笔记，最终换来了不负众望的回报。但是大学期间，确实过的浑浑噩噩，以至于到了大学结束，竟然还对自己的人生模模糊糊，根本不知道自己想要什么，想做什么。
 
