--- a/_posts/2015-01-09-thanks.md
+++ b/_posts/2015-01-09-thanks.md
@@ -13,6 +13,6 @@ category: paper
 
 &#160; &#160; &#160; &#160;特别要感谢的就是黄小红老师和马严老师。还记得第一次去找黄老师咨询报考时的忐忑，成绩出来时的紧张。因为正好压着国家线，所以特别担心，但是黄老师没有抛弃我，给了我这个读研的机会，所以我也是格外的珍惜。而且虽然我是工程硕士，但是还是发表了两篇论文，一篇专利，确实很为自己骄傲。现在的我，虽然还不够成熟，某些方面还特别欠缺，但是我的内心得到了巨大的成长，真的还要对黄老师说一声感谢，感谢您！也谢谢马老师教给我们的做人之道。
 
-&#160; &#160; &#160; &#160;在这里还要感谢我的家人，是你们一直在我背后默默地支持着我，在我迷茫的时候安慰着我，一直以来都尊重我自己的选择，你们是我前进最大的动力。还要感谢我的同学，感谢彬哥和超炯带给我的不一样的生活，永远会怀念那些年我们一起练过的跆拳道，骑过的东方红和十三陵。感谢杜杜，我们一起去过的兰州，一起赖在床上的那些早晨。感谢阳哥，虽然逗逼但最细心，最体贴，最成熟的好伙伴。也感谢洁哥，洁哥的世界我真的不懂。还要感谢隔壁寝室的小伙伴，有事情时总能伸出援手。还要感谢本科寝室的好朋友张旭、阵子、老大、小银灰，愿大家一切都好。还要特别感谢我的女朋友，包容我的不成熟，在我最困难的时候给我提出建设性的意见，带给我无数的快乐和感动，愿亲爱的你一直健康快乐！
+&#160; &#160; &#160; &#160;在这里还要感谢我的家人，是你们一直在我背后默默地支持着我，在我迷茫的时候安慰着我，一直以来都尊重我自己的选择，你们是我前进最大的动力。还要感谢我的同学，感谢彬哥和超炯带给我的不一样的生活，永远会怀念那些年我们一起练过的跆拳道，骑过的东方红和十三陵。感谢杜杜，我们一起去过的兰州，一起赖在床上的那些早晨。感谢阳哥，虽然逗逼但最细心，最体贴，最成熟的好伙伴。也感谢洁哥，让我知道什么才是真正高大上的游戏。还要感谢隔壁寝室的小伙伴，有事情时总能伸出援手。还要感谢本科寝室的好朋友张旭、阵子、老大、小银灰，愿大家一切都好。还要特别感谢我的女朋友，包容我的不成熟，在我最困难的时候给我提出建设性的意见，带给我无数的快乐和感动，愿亲爱的你一直健康快乐！
 
 &#160; &#160; &#160; &#160;研究生生活马上结束，我在这期间收获太多，感谢出现在我生命中的每一个人，感谢每一次的困难和失败，因为我更懂得了收获和成功的不易。学生生涯就要结束，即将迈进社会，未来的我一定会带着一往直前的勇气，开启另一段崭新的生活，别了，那个无忧无虑的匆匆少年！
